<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softwarenation.superpatient.TermsActivity"
    android:background="@drawable/background">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/superpatient_logo_small"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title1"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title2"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title3"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title4"/>

        <TextView
            android:id="@+id/terms_conditions_paragraph_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>

        <TextView
            android:id="@+id/terms_conditions_paragraph2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title5"/>

        <TextView
            android:id="@+id/terms_conditions_paragraph_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title6"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph2_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph2"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
       android:textSize="15sp"
        android:paddingLeft="30dp"
        android:textColor="@color/black"
        android:paddingBottom="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsTitle"
            android:text="@string/terms_conditions_title7"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph"/>
        <TextView
            android:id="@+id/terms_conditions_paragraph2_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/termsParagraph2"/>

        </LinearLayout>
    </ScrollView>
    <Button android:id="@+id/terms_conditions_agree_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_terms_conditions"
        style="@style/buttonFont"
        />

</LinearLayout>
