<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softwarenation.superpatient.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/main_super_digits"
                android:background="@color/JournalGray1"
                style="@style/mainCell"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_super_digits"
                    />
                <TextView
                    android:id="@+id/main_super_digits_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/super_digits"
                    style="@style/textPurpleMain"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_super_mash_up"
                android:background="@color/JournalGray2"
                style="@style/mainCell"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_super_mashup"
                    />
                <TextView
                    android:id="@+id/main_super_mash_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/super_mash_up"
                    style="@style/textPurpleMain"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/main_super_color_block"
                android:background="@color/JournalGray2"
                style="@style/mainCell"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_super_color"
                    />
                <TextView
                    android:id="@+id/main_super_color_block_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/super_color_block"
                    style="@style/textPurpleMain"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_super_speed"
                android:background="@color/JournalGray1"
                style="@style/mainCell"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_super_speed"
                    />
                <TextView
                    android:id="@+id/main_super_speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/super_speed"
                    style="@style/textPurpleMain"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/main_follow_super_patient"
                android:background="@color/JournalGray1"
                style="@style/mainCell"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_follow_super_patient"
                    />
                <TextView
                    android:id="@+id/main_follow_super_patient_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/follow_super_patient"
                    style="@style/textPurpleMain"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white">

                <com.softwarenation.superpatient.utility.AnimationStanding
                    android:id="@+id/main_animation_standing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />
                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button android:id="@+id/main_super_journal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_super_journal"
        style="@style/buttonFont"
        />

</LinearLayout>
