<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.softwarenation.superpatient.JournalFeelingGoodActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:background="@color/Purple"
      android:paddingTop="12dp"
      android:paddingBottom="12dp"
      android:paddingRight="4dp">
      <ImageView
          android:id="@+id/back_button_positive_mood"
          android:clickable="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:padding="12dp"
          android:src="@drawable/back_arrow"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLines="3"
          android:text="@string/title_activity_journal_feeling_good"
          android:gravity="center"
          android:layout_gravity="center_vertical"
          style="@style/titleActionBar"/>
      </LinearLayout>
    <TableLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/journal_positive_happy"
                android:background="@color/JournalGray1"
                style="@style/journalCell"
                >
                <ImageView
                    android:id="@+id/journal_positive_happy_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/correct_small"
                    android:layout_marginLeft="65dp"
                    android:layout_marginBottom="-20dp"
                    android:visibility="invisible"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/journal_feeling_happy"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/journal_happy"
                    style="@style/textPurpleJournal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/journal_positive_calm"
                android:background="@color/JournalGray2"
                style="@style/journalCell"
                >
                <ImageView
                    android:id="@+id/journal_positive_calm_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/correct_small"
                    android:layout_marginLeft="65dp"
                    android:layout_marginBottom="-20dp"
                    android:visibility="invisible"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/journal_feeling_calm"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/journal_calm"
                    style="@style/textPurpleJournal"/>
            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/journal_positive_accomplished"
                android:background="@color/JournalGray2"
                style="@style/journalCell"
                >
                <ImageView
                    android:id="@+id/journal_positive_accomplished_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/correct_small"
                    android:layout_marginLeft="65dp"
                    android:layout_marginBottom="-20dp"
                    android:visibility="invisible"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/journal_feeling_accomplished"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/journal_accomplished"
                    style="@style/textPurpleJournal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/journal_positive_hopeful"
                android:background="@color/JournalGray1"
                style="@style/journalCell"
                >
                <ImageView
                    android:id="@+id/journal_positive_hopeful_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/correct_small"
                    android:layout_marginLeft="65dp"
                    android:layout_marginBottom="-20dp"
                    android:visibility="invisible"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/journal_feeling_hopeful"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/journal_hopeful"
                    style="@style/textPurpleJournal"/>
            </LinearLayout>

        </TableRow>

        </TableLayout>

    <Button android:id="@+id/submit_journal_positive_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        style="@style/buttonFont"
        />

</LinearLayout>
